<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/frameScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <ImageView
            android:id="@+id/pointer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/seekbar_pointer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight=".3"
                android:text="@string/previous" />

            <Button
                android:id="@+id/buttonAllFrames"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:clickable="false"
                android:text="@string/view_all_frames" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1" >

            <Button
                android:id="@+id/button30Frames_low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:singleLine="true"
                android:background="@color/gray"
                android:layout_marginRight="3dp"
                android:text="@string/thirtyFrames_low" />

            <Button
                android:id="@+id/button60Frames_low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:layout_weight=".33"
                android:layout_marginRight="3dp"
                android:text="@string/sixtyFrames_low" />

            <Button
                android:id="@+id/button30Frames_high"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:layout_weight=".33"
                android:text="@string/thirtyFrames_high" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>